--- a/src/components/App/HomePage/styles.css
+++ b/src/components/App/HomePage/styles.css
@@ -93,17 +93,15 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-wrap: wrap;
     width: 100%;
     height: 500px;
     background-image: url('./images/food dash banner.png');
-    object-fit: fill;
 }
 
 .RestaurantPartners, .contactUs, .openHours {
     display: inline-block;
     width: 200px;
-    height: auto;
+    height: 150px;
 }
 
 .footerTitle {
@@ -123,4 +121,14 @@
 
 .email {
     font-weight: bold;
+}
+
+@media(max-width: 615px){
+    .footer{
+        flex-direction: column;
+        height: auto;
+    }
+    .RestaurantPartners{
+        margin: 2.2rem 0px;
+    }
 }
