--- a/src/components/App/NavigationBar/styles.css
+++ b/src/components/App/NavigationBar/styles.css
@@ -15,6 +15,8 @@ span {
     justify-content: space-between;
     background-color: green;
     padding: 1.0rem;
+    overflow: hidden;
+    height: auto;               /* this is where i left off*/
 }
 
 .navLogo {
@@ -87,4 +89,29 @@ span {
     width: 300px;
     margin: auto;
     text-align: center;
+}
+
+
+.hamburger{
+    cursor: pointer;
+    color: white;
+    font-size: 1.8rem;
+    display: none;
+}
+
+
+@media (max-width: 670px) {
+
+    .hamburger{
+        display: block;
+    }
+
+    .navBar, .menu{
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+    .icon{
+        padding:20px
+    }
 }
