--- a/src/components/App/NavigationBar/styles.css
+++ b/src/components/App/NavigationBar/styles.css
@@ -19,6 +19,10 @@ span {
     height: 70px;
 }
 
+.navBar.closeOpen{
+    height: auto;
+}
+
 .navLogo {
     font-family: 'Pacifico', cursive;
     font-size: 1.2rem;
@@ -99,6 +103,12 @@ span {
     display: none;
 }
 
+.whiteLine{
+    border: 1px solid white;
+    width: 100%;
+    display: none;
+}
+
 
 @media (max-width: 670px) {
     .navLogo{
@@ -113,16 +123,32 @@ span {
         height: 60px;
         flex-direction: column;
         align-items: center;
-        padding-top: 5px;
+        padding: 5px 0px 10px 0px;
+        gap: 20px;
     }
 
     .menu{
         flex-direction: column;
         align-items: center;
         gap: 30px;
+        width: 100%;
+    }
+
+    .menuItem{
+        display: block;
+        height: 100%;
+        text-align: center;
+    }
+
+    .menuCart{
+        width: 100%;
     }
 
     .icon{
         padding: 10px
+    }
+
+    .whiteLine{
+        display: block;
     }
 }
