--- a/src/components/App/HomePage/ImageCarousel/styles.css
+++ b/src/components/App/HomePage/ImageCarousel/styles.css
@@ -33,7 +33,7 @@
     color: white;
     border: none;
     border-radius: 10px;
-    background-color: green;
+    background-color: rgb(0,0,0,0);
     cursor: pointer;
     font-size: 1.7rem;
 }
@@ -46,9 +46,13 @@
     right: -50px;
 }
 
+.leftButton:hover, .rightButton:hover{
+    color: red;
+}
+
 @media (max-width: 1120px) {
     .leftButton {
-        left: 50px
+        left: 50px;
     }
     .rightButton {
         right: 50px;
@@ -63,5 +67,16 @@
         width: 100%;
     }
 
+}
+
+@media (max-width: 660px){
+    .leftButton{
+        left: 30px;
+        top: 60%;
+    }
+    .rightButton{
+        right: 30px;
+        top: 60%;
+    }
 }
 
