--- a/src/components/App/HomePage/styles.css
+++ b/src/components/App/HomePage/styles.css
@@ -30,6 +30,7 @@
 
 .descriptionTwo {
     margin-top: 30px;
+    white-space: nowrap;
 }
 
 .descriptionThree {
@@ -132,3 +133,4 @@
         margin: 2.2rem 0px;
     }
 }
+
