--- a/src/components/App/DisplayRestaurantInfo/styles.css
+++ b/src/components/App/DisplayRestaurantInfo/styles.css
@@ -80,3 +80,27 @@
     padding: 10px;
     cursor: pointer;
 }
+
+
+@media(max-width: 690px){
+    .itemImage{
+        float: initial;
+        display: block;
+        margin: auto;
+    }
+
+    .itemIngredients{
+        width: 90%;
+        word-wrap: break-word;
+        margin: auto;
+    }
+
+    .itemTitle, .itemPrice{
+        text-align: center;
+    }
+
+    .chooseItem{
+        display: block;
+        margin: auto;
+    }
+}
