--- a/src/components/App/NavigationBar/Cart/styles.css
+++ b/src/components/App/NavigationBar/Cart/styles.css
@@ -2,7 +2,7 @@
 .displayOrder {
     background-color: darkgreen;
     width: 400px;
-    height: 100%;
+    height: 100vh;
     border-left: 5px solid black;
     position: fixed;
     z-index: 2;
@@ -10,15 +10,19 @@
     transition: right 0.3s 0s ease-in;
     -webkit-transition: right 0.3s 0s ease-in;
     overflow: auto;
-
 }
 
+.itemContainerCheckOut{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 
 .close {
     position: absolute;
     cursor: pointer;
-    top: 10px;
-    left: 10px;
+    top: 20px;
+    left: 20px;
     font-size: 2.0rem;
     color: white;
 }
@@ -34,6 +38,7 @@
     width: 300px;
     margin: auto;
     text-align: center;
+    margin-top: 15px;
 }
 
 
@@ -67,22 +72,15 @@
 
 }
 
-.decrease, .increase {
-    border-radius: 100%;
-    border: none;
-    padding: 8px;
-    cursor: pointer
+.cartMessage{
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Times New Roman';
+    width: 100%;
+    text-align: center;
+    color: white;
+    margin-top: 30px;
 }
-
-.decrease {
-    background-color: red;
-}
-
-.increase {
-    background-color: green;
-    margin-bottom: 1.2rem;
-}
-
 
 @media (max-width: 670px) {
     .close{
@@ -116,5 +114,9 @@
     .yourOrder{
         font-size: 2.0rem;
         width: 230px;
+    }
+
+    .close {
+        left: 10px;
     }
 }
