--- a/src/components/App/Checkout/Form/styles.css
+++ b/src/components/App/Checkout/Form/styles.css
@@ -10,7 +10,7 @@
     border: none;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
 }
 
 .instructions-container > textarea {
@@ -49,4 +49,17 @@
     font-size: 1.5rem;
 }
 
+.form-submit {
+    width: 100%;
+    height: 40px;
+    background-color: green;
+    border: none;
+    color: white;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+}
 
+.form-submit:hover{
+    background-color: rgb(0, 80, 0);    
+}
