--- a/src/components/App/Checkout/styles.css
+++ b/src/components/App/Checkout/styles.css
@@ -8,11 +8,5 @@
     gap: 25px;
     justify-content: center;
     align-items: center;
-}
-
-.checkout-Container > h1{
-    color: green;
-    font-family: 'Bebas Neue';
-    font-weight: 400;
-    font-size: 1.5rem;
+    padding-bottom: 20px;
 }
