--- a/src/components/App/Checkout/DisplayItems/Quantity/styles.module.css
+++ b/src/components/App/Checkout/DisplayItems/Quantity/styles.module.css
@@ -1,4 +1,4 @@
-.item-quantity{
+.quantity{
     grid-column: 3/4;
     grid-row: 1/4;
     display: flex;
@@ -25,4 +25,12 @@
     border-radius: 100%;
     background-color: red;
     cursor: pointer;
+}
+
+@media(max-width: 480px){
+    .quantity{
+        grid-column: 1/2;
+        grid-row: 4/5;
+        margin-top: 20px;
+    }
 }
