--- a/src/components/App/Checkout/Form/DeliveryOption/styles.module.css
+++ b/src/components/App/Checkout/Form/DeliveryOption/styles.module.css
@@ -1,3 +1,35 @@
+.title{
+    grid-column: 1/3;
+    grid-row: 1/2;
+    color: green;
+    font-family: 'Bebas Neue';
+    font-size: 1.5rem;
+}
+
+
+.radioButtons{
+    border: none;
+    outline: none;
+    display: grid;
+    grid-template-columns: 20px auto;
+    column-gap: 20px;
+    row-gap: 15px;
+}
+
+.radioButtons > input[type='radio'] {
+    justify-self: center;
+    width: 20px;
+    height: 20px;
+    accent-color: green;
+}
+
+
+
+
+
+
+
+
 .overlay{
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
@@ -29,7 +61,6 @@
     margin: 0px;
     color: green;
 }
-
 
 .dialog > select{
     width: 80%;
@@ -64,4 +95,11 @@
 
 .buttonContainer > button:hover{
     background-color: rgb(1, 63, 1);
+}
+
+
+@media(max-width: 480px){
+    .radioButtons{
+        justify-content: center;
+    }
 }
