--- a/src/components/App/Checkout/styles.module.css
+++ b/src/components/App/Checkout/styles.module.css
@@ -1,4 +1,4 @@
-.checkout-Container{
+.container{
     width: 100%;
     height: 100%;
     padding-top: 20px;
@@ -9,4 +9,11 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 20px;
+}
+
+
+@media(max-width: 480px){
+    .container{
+        gap: 40px
+    }
 }
