--- a/src/components/App/Checkout/Form/PaymentInformation/styles.module.css
+++ b/src/components/App/Checkout/Form/PaymentInformation/styles.module.css
@@ -16,3 +16,11 @@
     font-family: 'Bebas Neue';
     font-size: 1.5rem;
 }
+
+
+@media(max-width: 480px){
+    .container{
+        width: 320px;
+        align-self: center;
+    }
+}
