--- a/src/components/App/Checkout/styles.module.css
+++ b/src/components/App/Checkout/styles.module.css
@@ -3,6 +3,8 @@
     height: 100%;
     padding-top: 20px;
     background-image: url('./images/food dash banner.png');
+    background-position: contain;
+    background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
     gap: 25px;
@@ -14,6 +16,7 @@
 
 @media(max-width: 480px){
     .container{
-        gap: 40px
+        gap: 40px;
+        background-repeat: no-repeat;
     }
 }
