--- a/src/components/App/AccountOrLogin/Login/styles.module.css
+++ b/src/components/App/AccountOrLogin/Login/styles.module.css
@@ -1,5 +1,18 @@
+.container{
+    background-image: url('./images/food dash banner.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .form{
-    width: 100%;
+    width: 400px;
+    padding: 30px;
+    background-color: green;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,7 +41,29 @@
     background-color: rgb(192, 192, 192);
 }
 
-.container{
+
+.title{
+    color: white;
+    font-family: 'Bebas Neue';
+    font-size: 35px;
+    text-align: center;
+}
+
+.submit{
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    color: green;
+    background-color: white;
+    cursor: pointer;
+}
+
+.submit:hover{
+    background-color: rgb(192, 192, 192);
+}
+
+.codeContainer{
     border: none;
     display: flex;
     flex-direction: column;
@@ -59,7 +94,24 @@
     left: 10px;
 }
 
+
+
 @media(max-width: 460px){
+    .form{
+        width: 300px;
+    }
+}
+
+@media(max-width: 460px){
+    .container{
+        padding-top: 50px;
+        align-items: start;
+    }
+
+    .form{
+        width: 300px;
+    }
+    
     .title{
         font-size: 25px;
     }
