--- a/src/components/App/PickUpOrder/styles.module.css
+++ b/src/components/App/PickUpOrder/styles.module.css
@@ -1,24 +1,22 @@
 .container{
     width: 100%;
-    height: 60vh;
     background-image: url('./images/food dash banner.png');
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 30px;
+    padding: 30px 0px;
 }
 
 .order{
+    width: 400px;    
     display: flex;
     flex-direction: column;
     gap: 30px;
-    width: 400px;
     margin: auto;
 }
 
 .order_detail{
     color: green;
-    font-size: 25px;
-
+    font-size: 1.5625rem;
 }
 
 .order_detail > span {
@@ -45,11 +43,30 @@
 
 .item_name{
     color: green;
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: 700;
+    text-transform: capitalize;
 }
 
 .item_quantity{
     color: green;
     font-size: 20px;    
+}
+
+@media(max-width: 500px){
+    .order{
+        width: 300px;
+    }
+
+    .order_detail{
+        font-size: 1.3rem
+    }
+
+    .item{
+        grid-template-columns: 50px 150px 30px;
+    }
+
+    .item_name{
+        font-size: 1.3rem;
+    }
 }
