--- a/src/components/App/HomePage/styles.css
+++ b/src/components/App/HomePage/styles.css
@@ -11,7 +11,7 @@
 .title {
     font-family: 'Pacifico', cursive;
     font-size: 2.9rem;
-    background-color: green;
+    background-color: #008000;
     width: 300px;
     height: auto;
     margin: auto;
